2005-01-29  Jan Nieuwenhuizen  <janneke@gnu.org>

	* site/switch/howto.html: Cleanups and langify urls.

	* site/graphics/annotate-example-single-part.svg:
	* site/graphics/annotate-example-score.svg: 
	* site/graphics/annotate-example-parts.svg: 
	* site/graphics/annotate-example-lead.svg: 
	* site/graphics/annotate-example-2.svg: 
	* site/graphics/annotate-example-1.svg: Add gettext markers.

	* scripts/translate.py: New script.

	* GNUmakefile: Use it.

	* site/index.html: Add CVS Revision marker, for tracking
	translated versions.

	* README: Add some words for translators.

	* nl/about/browser-language.html: 
	* site/about/browser-language.html: New page.

	* scripts/format-page.py: Do not bracket location items.  Add text
	and link to browser-language page link to language menu.

	* todo: Remove

	* scripts/aqua-pill-button.scm:
	* scripts/lily-button.scm:
	* scripts/dump-lily-web.sh: Move from top.
	
2005-01-28  Jan Nieuwenhuizen  <janneke@gnu.org>

	* site/switch/advantages.html: HTML fixes.

	* scripts/format-page.py (grab_gettext): Strip .html from [most]
	local urls.

	* nl/switch/index.html: 
	* nl/index.html: Update.

	* scripts/format-page.py: Refactor.
	(get_menu): Be safer.
	(langify_url): Remove.

	* site/template.ihtml: New file.

2005-01-27  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* site/news.ihtml (href): announce 2.5.9

2005-01-27  Jan Nieuwenhuizen  <janneke@gnu.org>

	* GNUmakefile: 
	* scripts/format-page.py: Update i18n.

2005-01-25  Jan Nieuwenhuizen  <janneke@gnu.org>

	* site/index.html: Simplify.  Move style attributes to newweb.css.
	Move news to news.ihtml.

	* site/menu-entries.py: Gettextize link names.

	* scripts/format-page.py: Handle i18n.  Add @.ihtml@ and
	_@gettext@ subtsitutions.

	* GNUmakefile: Add i18n stuff.

	* po/:
	* nl/: New dir.

2005-01-22  Graham Percival  <gperlist@shaw.ca>

	* site/devel/participating/standards.html: fix typo.

	* site/devel/participating/index.html: added info about contributing